[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/turret.gd" type="Script" id=1]
[ext_resource path="res://gfx/turret.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[node name="turret" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.4, 0, 0, 1.7, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
bullet_speed = 500

[node name="shoot_pos" type="Position2D" parent="."]

transform/pos = Vector2( -0.142395, -18.5115 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/scale = Vector2( 1.4, 1.7 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="visibility" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[node name="shoot_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="enter_screen" from="visibility" to="." method="_on_visibility_enter_screen"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]


